2004-10-05  Derek Price  <derek@ximbiot.com>

	* unlocked-io.m4: Import most recent version from GNULIB.

2004-10-05  Derek Price  <derek@ximbiot.com>

	* regex.m4: Import most recent version from GNULIB.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add strftime.m4.
	* strftime.m4: New file.

2004-05-20  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add tzset.m4.

2004-05-14  Derek Price  <derek@ximbiot.com>

	* gettime.m4: Updated from GNULIB.

2004-05-03  Derek Price  <derek@ximbiot.com>

	* bison.m4: Declare YACC & YFLAGS as precious vars.

2004-05-03  Derek Price  <derek@ximbiot.com>

	* bison.m4: Use AM_MISSING_PROG rather than a set/subst combination.

2004-05-02  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add strerror.m4 & strerror_r.m4.
	* strerror_r.m4: New file.
	* Makefile.in: Regenerated.

2004-04-28  Derek Price  <derek@ximbiot.com>

	* unlocked-io.m4: Update to most recent version from GNULIB.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
	* bison.m4, tm_gmtoff.m4, getdate.m4: New files.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* mktime.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* time_r.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* nanosleep.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new files.
	* clock_time.m4, gettime.m4: New files.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.
	* gettimeofday.m4: New file.
	* Makefile.in: Regenerated.

2004-04-27  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Add new file.